<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.binarysolutions.byscar.byScar.Configuration"
    android:orientation="vertical"
    android:background="#9ab5fe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/config_title_mode"
            android:id="@+id/textView3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/config_description_mode"
                android:id="@+id/textView4"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Switch
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:id="@+id/switchConfiguration"
                android:layout_gravity="center_vertical|right"
                android:checked="true"
                android:textOff=""
                android:textOn="@string/activat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/idioma"
            android:id="@+id/textView5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/idioma_escull"
                android:id="@+id/textView6"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerIdiomes"
                android:layout_gravity="center_vertical|right"
                android:checked="true"
                android:textOff=""
                android:textOn="@string/activat"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
